syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "CommGetPromotionAwardRequestProtobuf";

message	CommGetPromotionAwardRequest  {
		uint32	promotion_id = 10;
}