syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "PlayerStringProtobuf";

message	PlayerString  {
	string	key = 10;
	string	value = 11;
}